--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
 		"http": "*",
 		"underscore": "*",
 		"body-parser": "~1.2.0"
-	}
+	},
+
+	"scripts": {
+  "start": "node app.js"
+	},
+	"main": "app.js"
 }
